# ChangeLog for app-misc/cld-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cld-meta-10.4 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cld-meta-10.4.ebuild:
  Bump version.

  25 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cld-meta-10.3.91.ebuild:
  Removed kde-base/ktimetracker, kde-base/ktimer, kde-base/okteta kde-base/konqueror kde-misc/konq-plugins kde-base/nsplugins kde-base/kdepim-wizards

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cld-meta-10.0.ebuild,+metadata.xml:
  Meta package for CLD.