@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cld-meta-10.4-r1 (05 May 2010)
+
+  05 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -cld-meta-10.4.ebuild, +cld-meta-10.4-r1.ebuild:
+  Removed k3b-i18n from cld-meta package.
+
 *cld-meta-10.4 (05 Apr 2010)
 
   05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
